objects/SMAX_PS_Fault_Code_Group__c.object
<CustomObject>
    <label>Fault Code Group</label>
    <nameField>
        <label>Fault Code Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fault Code Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Code_Group__c</fullName>
        <externalId>true</externalId>
        <label>Code Group</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Family__c</fullName>
        <externalId>true</externalId>
        <label>Code Family</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Group_Type__c</fullName>
        <label>Code Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SVMX_PS_Code_Group_Type</valueSetName>
        </valueSet>
    </fields>
</CustomObject>